--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Découvrez nos coups de cœur, nos légendes et nos révélations musicales angl
 <img src="billieeilish.jpg" alt="Portrait de Billie Eilish">
 <a href="https://www.youtube.com/watch?v=j5B0O8STbEc">LUNCH - Billie Eilish</a>
 <audio controls>
-  <source src="Billie Eilish - bad guy (Lyrics).m4a" type="audio/mpeg">
+  <source src="Billie Eilish - bad guy (Lyrics).mp4" type="audio/mpeg">
 </audio>
 
 <h3>Beyoncé</h3>
@@ -29,7 +29,7 @@ Découvrez nos coups de cœur, nos légendes et nos révélations musicales angl
 <img src="beyoncé.jpg" alt="Portrait de Beyoncé">
 <a href="https://www.youtube.com/watch?v=UL_JXt4FI6E">Beyoncé au Super Bowl</a>
 <audio controls>
-  <source src="Beyoncé - Run The World (Girls) (Audio).m4a" type="audio/mpeg">
+  <source src="Beyoncé - Run The World (Girls) (Audio).mp4" type="audio/mpeg">
 </audio>
 
 <h3>Dua Lipa</h3>
